basesink: reset START_TIME when needed

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=685870